feature(server): 修改日志格式

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -45,9 +45,33 @@ http {
     ##
     # Logging Settings
     #
-#     access_log  /etc/nginx/access_log_pipe;
-#     error_log  /etc/nginx/error_log_pipe;
-#     open_log_file_cache max=10;
+    map $time_iso8601 $log_time {
+        default "";
+        "~^(?<year>\d{4})-(?<month>\d{2})-(?<day>\d{2})T(?<hour>\d{2}):(?<minutes>\d{2}):(?<seconds>\d{2})" "${year}-${month}-${day} ${hour}:${minutes}:${seconds}";
+    }
+
+    log_format main '{'
+                    '"remote_addr": "$remote_addr",'
+                    '"request_time": "$request_time",'
+                    '"response_time": "$upstream_response_time",'
+                    '"local_time": "$log_time",'
+                    '"request": "$request",'
+                    '"status": "$status",'
+                    '"host": "$host",'
+                    '"uri":"$uri",'
+                    '"args":"$args",'
+                    '"upstream_addr":"$upstream_addr",'
+                    '"http_referer": "$http_referer",'
+                    '"proxy_protocol_addr":"$proxy_protocol_addr",'
+                    '"http_user_agent": "$http_user_agent",'
+                    '"http_x_forwarded_for": "$http_x_forwarded_for",'
+                    '"body_bytes_sent": "$body_bytes_sent",'
+                    '"limit_rate": "$limit_rate"'
+                    '}';
+
+    access_log  /var/log/nginx/access.log main;
+    error_log  /var/log/nginx/error.log ;
+    open_log_file_cache max=10;
     ##
     # Gzip Settings
     ##
